dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/AST.c)
AC_CONFIG_AUX_DIR(inst)
AM_INIT_AUTOMAKE(cqual, 0.981)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_YACC
AM_PROG_LEX
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AM_PATH_LISPDIR

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MEMCMP
AC_FUNC_SETVBUF_REVERSED
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gettimeofday strdup strtol)

AC_OUTPUT(Makefile doc/Makefile src/Makefile src/libcompat/Makefile PAM-3/Makefile PAM-3/elib/Makefile)
